--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h2> Esta seria la descripción del proyecto</h2>
         <p>La lista de contribuyentes al repositorio seria esta:</p>
         <ul>
-            <li>Juan Andrés Espino</li>
-            <li>Iacon Juan Espino</li>
+            <li>Juan Andrés Espino 01/05/2025</li>
+            <li>Iacon Juan Espino 24/05/2025</li>
         </ul>
     </header>
 
